--- a/lenguaje.html
+++ b/lenguaje.html
@@ -17,36 +17,36 @@
         <div class="red-band"></div>
         <nav class="navbar navbar-expand-lg navbar-light">
             <div class="container">
-            <a class="navbar-brand" href="#">
-                <img src="img/logo.png" alt="">
-            </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+              <a class="navbar-brand" href="#">
+                  <img src="img/logo.png" alt="">
+              </a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+              </button>
+              <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                <li class="nav-item">
+                  <li class="nav-item">
                     <a class="nav-link" aria-current="page" href="#">Acerca de nosotros</a>
-                </li>
-                <li class="nav-item">
+                  </li>
+                  <li class="nav-item">
                     <a class="nav-link" href="#">Propietario</a>
-                </li>
-                <li class="nav-item">
+                  </li>
+                  <li class="nav-item">
                     <a class="nav-link" href="#">Arrendatario</a>
-                </li>
-                <li class="nav-item">
+                  </li>
+                  <li class="nav-item">
                     <a class="nav-link" href="#">Intermediarios Inmobiliarios</a>
-                </li>
+                  </li>
                 </ul>
-                <button>
+                <a class="button">
                     Estudio Arrendamiento
-                </button>
-            </div>
+                </a>
+              </div>
             </div>
         </nav>
         <div class="miga">
             <div class="container">
-                <a href="index.html" class="red">Inicio</a> / <a href="#" class="blue">Acerca de nosotros</a> / <a href="#" class="blue">Puntos de servicio</a>
+                <a href="index.html" class="red">Inicio</a> / <a href="#" class="blue">lenguaje inmobiliario</a> 
             </div>
         </div>
     </header>
@@ -58,6 +58,11 @@
             <img src="img/logo.png" alt="" class="img">
         </div>
         <img src="img/movil/menu.png" alt="" class="menu" onclick="openNav()">
+        <div class="miga">
+            <div class="container-fluid">
+                <a href="index.html" class="red">Inicio</a> / <a href="#" class="blue">lenguaje inmobiliario</a> 
+            </div>
+        </div>
     </div>
 
     <!-- menú móvil -->
@@ -143,7 +148,6 @@
         </a>
     </div>
 
-
     <!-- contenido -->
     <section>
         <div class="banner lenguaje">
@@ -160,7 +164,7 @@
             </p>
         </div>
         <div class="container">
-            <div class="search-box">
+            <div class="search-box filtro">
                 <h3 class="left">
                     Ingrese el término a buscar
                 </h3>
@@ -169,15 +173,17 @@
                         <div class="col-lg-8">
                             <div class="input-group mb-3 left">
                                 <input type="text" class="form-control" placeholder="Ejemplo: Arrendatario" aria-label="preguntas" aria-describedby="basic-addon2">
-                                <span class="input-group-text" id="basic-addon2"><img src="img/search.png" alt=""></span>
+                                <span class="input-group-text d-none d-lg-block" id="basic-addon2"><img src="img/search-gray.png" alt=""></span>
                             </div>
-                            
+                            <div class="btn-buscar">
+                                <a href="#">Buscar</a>
+                            </div>
                         </div>
                         <div class="col-lg-4">
                             <div class="filtro">
                                 <div class="dropdown">
                                     <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
-                                      <img src="img/filtro.png" alt="">
+                                      <img src="img/filtro.svg" alt="">
                                     </button>
                                     <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
                                       <li><a class="dropdown-item" href="#">Aa</a></li>
@@ -199,11 +205,11 @@
             <div class="accordion accordion-flush" id="accordionFlushExample">
                 <div class="accordion-item">
                   <h2 class="accordion-header" id="flush-headingOne">
-                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+                    <button class="accordion-button " type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
                       Aa
                     </button>
                   </h2>
-                  <div id="flush-collapseOne" class="accordion-collapse collapse show" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
+                  <div id="flush-collapseOne" class="accordion-collapse  show" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
                     <div class="accordion-body">
                         <div class="row">
                             <div class="col-lg-4">
@@ -338,11 +344,11 @@
                 </div>
             </div>
 
-            <nav aria-label="Page navigation example">
-                <ul class="pagination justify-content-end">
+            <nav aria-label="pagination" class="my-5">
+                <ul class="pagination">
                   <li class="page-item disabled">
                     <a class="page-link" href="#" tabindex="-1" aria-disabled="true">
-                        <img src="img/previous.png" alt="">
+                        <img src="img/icon_flecha-izq.svg" alt="">
                     </a>
                   </li>
                   <li class="page-item active"><a class="page-link" href="#">1</a></li>
@@ -363,7 +369,7 @@
             <div class="container">
                 <h2>Contáctenos</h2>
                 <div class="row">                
-                    <div class="col-lg-4 offset-lg-2">
+                    <div class="col-lg-4 offset-lg-2 col-md-5">
                         <p class="big">
                             <strong>Teléfono:</strong> +57(1) 3527070 <br>
                             <strong>Email:</strong> <a href="mailto:direccióncorreo@email.com">direccióncorreo@email.com</a>
@@ -373,10 +379,10 @@
                             <strong>Horario de atención:</strong> 8:00 a.m. - 5:00 p.m.
                         </p>
                     </div>
-                    <div class="col-lg-1">
+                    <div class="col-lg-1 col-md-1">
                         <div class="lineav"></div>
                     </div>
-                    <div class="col-lg-4">
+                    <div class="col-lg-4 col-md-5">
                         <p class="minus">
                             Para mayor información, acerca de 
                             cualquier servicio:
@@ -391,13 +397,13 @@
         <div class="footer-sec">
             <div class="container">
                 <div class="row">
-                    <div class="col-lg-2">
+                    <div class="col-lg-2 col-md-4 d-none d-xl-block">
                         <div class="logos">
                             <img src="img/vigilado.png" alt="">
-                        <img src="img/logo-gris.png" alt="">
+                            <img src="img/logo-gris.png" alt="" class="logo">
                         </div>
                     </div>
-                    <div class="col-lg-2">
+                    <div class="col-lg-2 col-md-4 d-none d-md-block">
                         <h4>SERVICIOS</h4>
                         <ul>
                             <li><a href="#">Arrendatario</a></li>
@@ -405,7 +411,43 @@
                             <li><a href="#">Propietario</a></li>                        
                         </ul>
                     </div>
-                    <div class="col-lg-3">
+
+                    <div class="col-sm-12 d-md-none">
+                        <div class="accordion accordion-flush" id="servicios">
+                            <div class="accordion-item">
+                                <h2 class="accordion-header" id="servicios1">
+                                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#s1" aria-expanded="false" aria-controls="flush-collapseOne">
+                                        SERVICIOS
+                                    </button>
+                                </h2>
+                                <div id="s1" class="accordion-collapse collapse" aria-labelledby="menu1-h" data-bs-parent="#servicios">
+                                    <div class="accordion-body">
+                                        <ul>
+                                            <li>
+                                                <a href="#">
+                                                    Arrendatario
+                                                </a>
+                                            </li>
+                                            <li>
+                                                <a href="#">
+                                                    Inmobiliaria
+                                                </a>
+                                            </li>
+                                            <li>
+                                                <a href="#">
+                                                    Propietario
+                                                </a>
+                                            </li>                                            
+                                        </ul>
+                                    </div>
+                                </div>
+                            </div>                                                                                  
+                        </div>
+                    </div>
+
+
+
+                    <div class="col-lg-3 col-md-5 d-none d-md-block">
                         <h4>ENLACES DE INTERÉS</h4>
                         <ul>
                             <li><a href="#">Grupo Bolívar</a></li>
@@ -415,27 +457,97 @@
                             <li><a href="#">Puntos de Servicio</a></li>
                         </ul>
                     </div>
-                    <div class="col-lg-3">
+
+                    <div class="col-sm-12 d-md-none">
+                        <div class="accordion accordion-flush" id="interes">
+                            <div class="accordion-item">
+                                <h2 class="accordion-header" id="interes1">
+                                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#i1" aria-expanded="false" aria-controls="flush-collapseOne">
+                                        ENLACES DE INTERÉS
+                                    </button>
+                                </h2>
+                                <div id="i1" class="accordion-collapse collapse" aria-labelledby="interes" data-bs-parent="#interes">
+                                    <div class="accordion-body">
+                                        <ul>
+                                            <li>
+                                                <a href="#">
+                                                    Grupo Bolívar
+                                                </a>
+                                            </li>
+                                            <li>
+                                                <a href="#">
+                                                    Lenguaje Inmobiliario
+                                                </a>
+                                            </li>
+                                            <li>
+                                                <a href="#">
+                                                    Artículos de Interés
+                                                </a>
+                                            </li>
+                                            <li>
+                                                <a href="#">
+                                                    Agencias de seguros El Libertador
+                                                </a>
+                                            </li>
+                                            <li>
+                                                <a href="#">
+                                                    Puntos de Servicio
+                                                </a>
+                                            </li>                                            
+                                        </ul>
+                                    </div>
+                                </div>
+                            </div>                                                                                  
+                        </div>
+                    </div>
+
+                    <div class="col-lg-3 col-md-3 d-none d-md-block">
                         <h4>CONTÁCTENOS</h4>
                         <p class="big">
                             <strong>Teléfono:</strong> +57(1) 3527070 <br>
                             <strong>Email:</strong> <a href="mailto:direccióncorreo@email.com">direccióncorreo@email.com</a>
                         </p>
                         <p>
-                            Oficina principal <br>
+                            <span>Oficina principal</span> <br>
                             <strong>Dirección:</strong> +57(1) 3527070 <br>
                             <strong>Horario de atención:</strong> 8:00 a.m. - 5:00 p.m.
                         </p>
                     </div>
-                    <div class="col-lg-2">
+
+                    <div class="col-sm-12 d-md-none">
+                        <div class="accordion accordion-flush" id="contacto">
+                            <div class="accordion-item">
+                                <h2 class="accordion-header" id="contacto1">
+                                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#c1" aria-expanded="false" aria-controls="flush-collapseOne">
+                                        CONTÁCTENOS
+                                    </button>
+                                </h2>
+                                <div id="c1" class="accordion-collapse collapse" aria-labelledby="contacto" data-bs-parent="#contacto">
+                                    <div class="accordion-body">                                        
+                                        <p class="big">
+                                            <strong>Teléfono:</strong> +57(1) 3527070 <br>
+                                            <strong>Email:</strong> <a href="mailto:direccióncorreo@email.com">direccióncorreo@email.com</a>
+                                        </p>
+                                        <p>
+                                            <span>Oficina principal</span> <br>
+                                            <strong>Dirección:</strong> +57(1) 3527070 <br>
+                                            <strong>Horario de atención:</strong> 8:00 a.m. - 5:00 p.m.
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>                                                                                  
+                        </div>
+                    </div>
+
+                    <div class="col-lg-2 col-md-12">
                         <div class="lineav"></div>
                         <div class="contenido-wf">
                             <h5>Nuestras redes sociales:</h5>
                             <div class="social">
                                 <ul>
-                                    <li><img src="img/ig.png" alt=""></li>
-                                    <li><img src="img/tw.png" alt=""></li>
-                                    <li><img src="img/fb.png" alt=""></li>
+                                    <li><a href="#"><img src="img/icon-rs_instagram-blanco.svg" alt=""></a></li>
+                                    <li><a href="#"><img src="img/icon-rs_twitter-blanco.svg" alt=""></a></li>
+                                    <li><a href="#"><img src="img/icon-rs_facebook-blanco.svg" alt=""></a></li>
                                 </ul>
                             </div>
                             <h5>Busca tu nuevo hogar en:</h5>
@@ -459,16 +571,10 @@
             @2021 Investigaciones y Cobranzas El Libertador S.A.   -   Todos los derechos reservados
         </div>
     </section>
-    <!-- Optional JavaScript; choose one of the two! -->
 
-    <!-- Option 1: Bootstrap Bundle with Popper -->
     <script src="js/popper.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
-
-    <!-- Option 2: Separate Popper and Bootstrap JS -->
-    <!--
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.min.js" integrity="sha384-lpyLfhYuitXl2zRZ5Bn2fqnhNAKOAaM/0Kr9laMspuaMiZfGmfwRNFh8HlMy49eQ" crossorigin="anonymous"></script>
-    -->
+    <script src="js/scripts.js"></script>
+    
   </body>
 </html>
