--- a/puntos.html
+++ b/puntos.html
@@ -38,9 +38,9 @@
                     <a class="nav-link" href="#">Intermediarios Inmobiliarios</a>
                   </li>
                 </ul>
-                <button>
+                <a class="button">
                     Estudio Arrendamiento
-                </button>
+                </a>
               </div>
             </div>
         </nav>
@@ -58,6 +58,11 @@
             <img src="img/logo.png" alt="" class="img">
         </div>
         <img src="img/movil/menu.png" alt="" class="menu" onclick="openNav()">
+        <div class="miga">
+            <div class="container-fluid">
+                <a href="index.html" class="red">Inicio</a> / <a href="#" class="blue">Acerca de nosotros</a> / <a href="#" class="blue">Puntos de servicio</a>
+            </div>
+        </div>
     </div>
 
     <!-- menú móvil -->
@@ -163,11 +168,11 @@
             <div class="accordion accordion-flush mt-5" id="accordionFlushExample">
                 <div class="accordion-item">
                   <h2 class="accordion-header" id="flush-headingOne">
-                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+                    <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
                       Bogotá
                     </button>
                   </h2>
-                  <div id="flush-collapseOne" class="accordion-collapse collapse show" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
+                  <div id="flush-collapseOne" class="accordion-collapse  show" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
                     <div class="accordion-body">
                         <div class="row">
                             <div class="col-lg-3 col-md-6">
@@ -279,7 +284,7 @@
                     <div id="flush-collapseThree" class="accordion-collapse collapse" aria-labelledby="flush-headingThree" data-bs-parent="#accordionFlushExample">
                         <div class="accordion-body">
                             <div class="row">
-                                <div class="col-lg-3">
+                                <div class="col-lg-3 col-md-6">
                                     <div class="punto">
                                         <div class="city">
                                             Cali
@@ -294,7 +299,7 @@
                                         </p>
                                     </div>
                                 </div>
-                                <div class="col-lg-3">
+                                <div class="col-lg-3 col-md-6">
                                     <div class="punto">
                                         <div class="city">
                                             Armenia
@@ -310,7 +315,7 @@
                                         </p>
                                     </div>
                                 </div>
-                                <div class="col-lg-3">
+                                <div class="col-lg-3 col-md-6">
                                     <div class="punto">
                                         <div class="city">
                                             Barranquilla
@@ -326,7 +331,7 @@
                                         </p>
                                     </div>
                                 </div>
-                                <div class="col-lg-3">
+                                <div class="col-lg-3 col-md-6">
                                     <div class="punto">
                                         <div class="city">
                                             Barrancabermeja
@@ -343,7 +348,7 @@
                                         </p>
                                     </div>
                                 </div>
-                                <div class="col-lg-3">
+                                <div class="col-lg-3 col-md-6">
                                     <div class="punto">
                                         <div class="city">
                                             Bucaramanga
@@ -358,7 +363,7 @@
                                         </p>
                                     </div>
                                 </div>
-                                <div class="col-lg-3">
+                                <div class="col-lg-3 col-md-6">
                                     <div class="punto">
                                         <div class="city">
                                             Cartagena
@@ -374,7 +379,7 @@
                                         </p>
                                     </div>
                                 </div>
-                                <div class="col-lg-3">
+                                <div class="col-lg-3 col-md-6">
                                     <div class="punto">
                                         <div class="city">
                                             Ibagué
@@ -391,7 +396,7 @@
                                         </p>
                                     </div>
                                 </div>
-                                <div class="col-lg-3">
+                                <div class="col-lg-3 col-md-6">
                                     <div class="punto">
                                         <div class="city">
                                             Manizales
@@ -407,7 +412,7 @@
                                         </p>
                                     </div>
                                 </div>
-                                <div class="col-lg-3">
+                                <div class="col-lg-3 col-md-6">
                                     <div class="punto">
                                         <div class="city">
                                             Neiva
@@ -420,7 +425,7 @@
                                         </p>
                                     </div>
                                 </div>
-                                <div class="col-lg-3">
+                                <div class="col-lg-3 col-md-6">
                                     <div class="punto">
                                         <div class="city">
                                             Pereira
@@ -436,7 +441,7 @@
                                         </p>
                                     </div>
                                 </div>
-                                <div class="col-lg-3">
+                                <div class="col-lg-3 col-md-6">
                                     <div class="punto">
                                         <div class="city">
                                             Piedecuesta
@@ -450,7 +455,7 @@
                                         </p>
                                     </div>
                                 </div>
-                                <div class="col-lg-3">
+                                <div class="col-lg-3 col-md-6">
                                     <div class="punto">
                                         <div class="city">
                                             Santa Marta
@@ -465,10 +470,7 @@
                                             2:00 p.m - 5:00 p.m
                                         </p>
                                     </div>
-                                </div>
-                                
-                                
-
+                                </div>                                                                
                             </div>
                         </div>
                     </div>
@@ -482,7 +484,7 @@
             <div class="container">
                 <h2>Contáctenos</h2>
                 <div class="row">                
-                    <div class="col-lg-4 offset-lg-2">
+                    <div class="col-lg-4 offset-lg-2 col-md-5">
                         <p class="big">
                             <strong>Teléfono:</strong> +57(1) 3527070 <br>
                             <strong>Email:</strong> <a href="mailto:direccióncorreo@email.com">direccióncorreo@email.com</a>
@@ -492,10 +494,10 @@
                             <strong>Horario de atención:</strong> 8:00 a.m. - 5:00 p.m.
                         </p>
                     </div>
-                    <div class="col-lg-1">
+                    <div class="col-lg-1 col-md-1">
                         <div class="lineav"></div>
                     </div>
-                    <div class="col-lg-4">
+                    <div class="col-lg-4 col-md-5">
                         <p class="minus">
                             Para mayor información, acerca de 
                             cualquier servicio:
@@ -510,13 +512,13 @@
         <div class="footer-sec">
             <div class="container">
                 <div class="row">
-                    <div class="col-lg-2">
+                    <div class="col-lg-2 col-md-4 d-none d-xl-block">
                         <div class="logos">
                             <img src="img/vigilado.png" alt="">
-                        <img src="img/logo-gris.png" alt="">
+                            <img src="img/logo-gris.png" alt="" class="logo">
                         </div>
                     </div>
-                    <div class="col-lg-2">
+                    <div class="col-lg-2 col-md-4 d-none d-md-block">
                         <h4>SERVICIOS</h4>
                         <ul>
                             <li><a href="#">Arrendatario</a></li>
@@ -524,7 +526,43 @@
                             <li><a href="#">Propietario</a></li>                        
                         </ul>
                     </div>
-                    <div class="col-lg-3">
+
+                    <div class="col-sm-12 d-md-none">
+                        <div class="accordion accordion-flush" id="servicios">
+                            <div class="accordion-item">
+                                <h2 class="accordion-header" id="servicios1">
+                                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#s1" aria-expanded="false" aria-controls="flush-collapseOne">
+                                        SERVICIOS
+                                    </button>
+                                </h2>
+                                <div id="s1" class="accordion-collapse collapse" aria-labelledby="menu1-h" data-bs-parent="#servicios">
+                                    <div class="accordion-body">
+                                        <ul>
+                                            <li>
+                                                <a href="#">
+                                                    Arrendatario
+                                                </a>
+                                            </li>
+                                            <li>
+                                                <a href="#">
+                                                    Inmobiliaria
+                                                </a>
+                                            </li>
+                                            <li>
+                                                <a href="#">
+                                                    Propietario
+                                                </a>
+                                            </li>                                            
+                                        </ul>
+                                    </div>
+                                </div>
+                            </div>                                                                                  
+                        </div>
+                    </div>
+
+
+
+                    <div class="col-lg-3 col-md-5 d-none d-md-block">
                         <h4>ENLACES DE INTERÉS</h4>
                         <ul>
                             <li><a href="#">Grupo Bolívar</a></li>
@@ -534,27 +572,97 @@
                             <li><a href="#">Puntos de Servicio</a></li>
                         </ul>
                     </div>
-                    <div class="col-lg-3">
+
+                    <div class="col-sm-12 d-md-none">
+                        <div class="accordion accordion-flush" id="interes">
+                            <div class="accordion-item">
+                                <h2 class="accordion-header" id="interes1">
+                                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#i1" aria-expanded="false" aria-controls="flush-collapseOne">
+                                        ENLACES DE INTERÉS
+                                    </button>
+                                </h2>
+                                <div id="i1" class="accordion-collapse collapse" aria-labelledby="interes" data-bs-parent="#interes">
+                                    <div class="accordion-body">
+                                        <ul>
+                                            <li>
+                                                <a href="#">
+                                                    Grupo Bolívar
+                                                </a>
+                                            </li>
+                                            <li>
+                                                <a href="#">
+                                                    Lenguaje Inmobiliario
+                                                </a>
+                                            </li>
+                                            <li>
+                                                <a href="#">
+                                                    Artículos de Interés
+                                                </a>
+                                            </li>
+                                            <li>
+                                                <a href="#">
+                                                    Agencias de seguros El Libertador
+                                                </a>
+                                            </li>
+                                            <li>
+                                                <a href="#">
+                                                    Puntos de Servicio
+                                                </a>
+                                            </li>                                            
+                                        </ul>
+                                    </div>
+                                </div>
+                            </div>                                                                                  
+                        </div>
+                    </div>
+
+                    <div class="col-lg-3 col-md-3 d-none d-md-block">
                         <h4>CONTÁCTENOS</h4>
                         <p class="big">
                             <strong>Teléfono:</strong> +57(1) 3527070 <br>
                             <strong>Email:</strong> <a href="mailto:direccióncorreo@email.com">direccióncorreo@email.com</a>
                         </p>
                         <p>
-                            Oficina principal <br>
+                            <span>Oficina principal</span> <br>
                             <strong>Dirección:</strong> +57(1) 3527070 <br>
                             <strong>Horario de atención:</strong> 8:00 a.m. - 5:00 p.m.
                         </p>
                     </div>
-                    <div class="col-lg-2">
+
+                    <div class="col-sm-12 d-md-none">
+                        <div class="accordion accordion-flush" id="contacto">
+                            <div class="accordion-item">
+                                <h2 class="accordion-header" id="contacto1">
+                                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#c1" aria-expanded="false" aria-controls="flush-collapseOne">
+                                        CONTÁCTENOS
+                                    </button>
+                                </h2>
+                                <div id="c1" class="accordion-collapse collapse" aria-labelledby="contacto" data-bs-parent="#contacto">
+                                    <div class="accordion-body">                                        
+                                        <p class="big">
+                                            <strong>Teléfono:</strong> +57(1) 3527070 <br>
+                                            <strong>Email:</strong> <a href="mailto:direccióncorreo@email.com">direccióncorreo@email.com</a>
+                                        </p>
+                                        <p>
+                                            <span>Oficina principal</span> <br>
+                                            <strong>Dirección:</strong> +57(1) 3527070 <br>
+                                            <strong>Horario de atención:</strong> 8:00 a.m. - 5:00 p.m.
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>                                                                                  
+                        </div>
+                    </div>
+
+                    <div class="col-lg-2 col-md-12">
                         <div class="lineav"></div>
                         <div class="contenido-wf">
                             <h5>Nuestras redes sociales:</h5>
                             <div class="social">
                                 <ul>
-                                    <li><img src="img/ig.png" alt=""></li>
-                                    <li><img src="img/tw.png" alt=""></li>
-                                    <li><img src="img/fb.png" alt=""></li>
+                                    <li><a href="#"><img src="img/icon-rs_instagram-blanco.svg" alt=""></a></li>
+                                    <li><a href="#"><img src="img/icon-rs_twitter-blanco.svg" alt=""></a></li>
+                                    <li><a href="#"><img src="img/icon-rs_facebook-blanco.svg" alt=""></a></li>
                                 </ul>
                             </div>
                             <h5>Busca tu nuevo hogar en:</h5>
