--- a/propietario.html
+++ b/propietario.html
@@ -297,7 +297,7 @@
                             <li class="cuota g-boldfont"> Cuota de administración en mora</li>
                             <li class="servicios g-boldfont"> Servicios públicos en mora </li>
                             <li class="danos g-boldfont"> Daños y faltantes de inventario</li>
-                            <li class="emerg g-boldfont"> Atención de emergencia durante la ocupación del inmueble</li>
+                            <li class="emerg g-boldfont "> Atención de emergencia durante la ocupación del inmueble.</li>
                         </ul>
                     </div>
                 </div>
